--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <img class="photo" src="https://assets.cntraveller.in/photos/60ba16d2002baf698cc67122/master/pass/maldives1-1366x768.jpg" alt="Ceci est une femme qui fait du Paddle" />
 <h3>Pourquoi aller aux Maldives? </h3>
 
-<li>les plages de rêves</li>
+<li>Les plages de rêves</li>
 <li>Le beau temps</li>
 <li>Les spots de plongée incroyables</li>
 <li>Hôtels pieds dans l'eau </li>
